portfolio added, site is mobile ready and all spacing issues corrected

--- a/css/styles.css
+++ b/css/styles.css
@@ -50,7 +50,7 @@ h2 {
 .content-wrap {
   max-width:1200px;
   margin: auto;
-  padding: 50px;
+  padding: 20px;
   overflow: auto;
 }
 .col-narrow{
@@ -130,9 +130,17 @@ footer {
 -------------------------------*/
 .projects {
   display: inline-block;
-  margin-right: 5%;
- 
+  margin-right: 60px;
+  border: 1px dashed #ddd;
+  box-shadow: 0 0 0 3px #fff, 0 0 0 5px #ddd, 0 0 0 10px #fff, 0 0 2px 10px #eee;
+  text-align: center;
+  width: 303px;
+  height:350px;
+  overflow: scroll;
+  margin-bottom: 10px;
+
 }
+   
 
 .portfolio {
   text-align: center;
@@ -144,7 +152,7 @@ footer {
 .work {
   background: #FFCB47;
 }
-h3 ~ p{
+h3 ~ p:first-of-type{
   margin:0;
 }
 .job-description p:first-of-type {
